test/integration/test_options/style/plot/backgroundColor/error/invalid_color-hex_length_3.mjs
import Chart from "/test/integration/test_options/style/plot/backgroundColor/chart.js";


const testSteps = [
    Chart.static("#00000")
]


export default testSteps
